# C-Homework

./: README.md
session_17_19_homework/: CMakeLists.txt
session_17_19_homework/docs/: CMakeLists.txt  Doxyfile.in
session_17_19_homework/docs/source/: conf.py  index.rst
session_17_19_homework/src/: CMakeLists.txt  homework_17.cpp  homework_17.h  homework_19.cpp  main.cpp  text.txt
session_17_19_homework/test/: CMakeLists.txt  test_17.cpp
